<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight=".07">


        <QuickContactBadge
            android:id="@+id/quickContactBadge"
            android:layout_width="135dp"
            android:layout_height="109dp"
            app:srcCompat="@android:color/black"/>


        <EditText
            android:id="@+id/customer_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Name"/>
        <EditText
            android:id="@+id/customer_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last Name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/customer_date_label"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/session_completed_label"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/sun_ma_29_15_50_01_edt"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/session_completed_label"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_new_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".07"
        android:text="Submit"/>

</LinearLayout>